manifests/apps/gearpit-web/overlays/local-dev/patch-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gearpit-web
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: web
          imagePullPolicy: IfNotPresent
