manifests/apps/gearpit-web/overlays/local-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gearpit-web-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: web.gearpit.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gearpit-web-svc
            port:
              number: 80
